@@ -1,3 +1,11 @@
+2005-05-05  Bruno Haible  <bruno@clisp.org>
+
+	* localealias.c (read_alias_file): Limit last patch to _LIBC case.
+
+2003-09-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* localealias.c (read_alias_file): Use fopen with 'c' mode flag.
+
 2003-09-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* loadmsgcat.c (open, close, read, mmap, munmap): Define as
